--- a/terraform/extra-manifests/applicationset.yaml.tmpl
+++ b/terraform/extra-manifests/applicationset.yaml.tmpl
@@ -1,30 +1,29 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: applications
+  name: root
   namespace: argocd
 spec:
   goTemplate: true
   goTemplateOptions: ['missingkey=error']
   generators:
     - git:
-        repoURL: https://github.com/bakseter/whpah
+        repoURL: https://github.com/bakseter/whpah.git
         revision: HEAD
         directories:
           - path: manifests/applications/**
+          - path: manifests/cluster-addons/**
   template:
     metadata:
       name: '{{.path.basename}}'
       labels:
-        bakseter.net/type: 'application'
+        app.kubernetes.io/component: '{{if eq (index .path.segments 1) "applications"}}app{{else}}addon{{end}}'
     spec:
       project: default
-      source:
-        repoURL: https://github.com/bakseter/whpah
-        targetRevision: HEAD
-        path: '{{.path.path}}'
-        directory:
-          recurse: true
+      sources:
+        - repoURL: https://github.com/bakseter/whpah.git
+          targetRevision: HEAD
+          path: '{{.path.path}}'
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{.path.basename}}'
